장소검색창

--- a/채상희.html
+++ b/채상희.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>공원찾기</title>
+  <title>가까운공원찾기</title>
   <style>
     #map {
       width: 500px;
