--- a/이상경.html
+++ b/이상경.html
@@ -2,21 +2,44 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>가장 가까운 공원 찾기</title>
+  <title>가까운공원찾기</title>
   <style>
-    /* CSS 스타일링은 생략 */
+    #map {
+      width: 500px;
+      height: 400px;
+    }
+    #search-box {
+      margin: 20px 0;
+    }
+    #results {
+      list-style: none;
+      padding: 0;
+    }
+    #results li {
+      margin: 5px 0;
+      padding: 5px;
+      background: lightcoral;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
-  <div id="map" style="width:500px;height:400px;"></div>
+  <div id="search-box">
+    <input type="text" id="keyword" placeholder="Search places...">
+    <button onclick="searchPlaces()">Search</button>
+  </div>
+  <div id="map"></div>
+  <ul id="results"></ul>
 
-  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=8b8be24d01d3c7bb07c87615edf72cbf"></script>
-  <script type="text/javascript" src="parkdata.js"></script> <!-- data.js 파일 불러오기 -->
+  <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6dfaf6fb0d9d9293c6bc9220328e7540&libraries=services"></script>
+  <script type="text/javascript" src="parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
 
   <script>
     let map;
-    let marker; 
-    let markers = []; // 마커를 담을 배열
+    let currentMarker;
+    let markers = [];
+    let ps;
+    let openInfoWindow = null;
 
     function initMap(lat, lng) {
       const container = document.getElementById('map');
@@ -25,50 +48,46 @@
         level: 3
       };
       map = new kakao.maps.Map(container, options);
-      //현재 위치 마커
-      const markerPosition = new kakao.maps.LatLng(lat, lng);
-      marker = new kakao.maps.Marker({
-        position: markerPosition
-      });
-      marker.setMap(map);
 
-      createMarker(lat, lng);
+      const markerPosition = new kakao.maps.LatLng(lat, lng);
+      currentMarker = new kakao.maps.Marker({
+        position: markerPosition,
+        map: map,
+        title: "현재 위치"
+      });
+
+      ps = new kakao.maps.services.Places();
     }
 
     function createMarker(lat, lng) {
       const imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
-
-      // 현재 위치
       const currentPosition = new kakao.maps.LatLng(lat, lng);
 
-      // 공원과 현재 위치 간의 거리를 계산하는 함수
       function calculateDistance(parkPosition) {
-        // parkPosition이 LatLng 객체인지 확인
         if (!(parkPosition instanceof kakao.maps.LatLng)) {
           console.error('Invalid park position:', parkPosition);
-          return Number.MAX_VALUE; // 거리를 최대값으로 설정하여 이후 정렬에서 무시되도록 함
+          return Number.MAX_VALUE;
         }
-
         const latDiff = parkPosition.getLat() - currentPosition.getLat();
         const lngDiff = parkPosition.getLng() - currentPosition.getLng();
         return Math.sqrt(latDiff * latDiff + lngDiff * lngDiff);
       }
 
-      // 공원 데이터를 거리순으로 정렬
-      data.sort((a, b) => {
+      const sortedData = data.map(park => {
+        return {
+          ...park,
+          위도: parseFloat(park.위도),
+          경도: parseFloat(park.경도)
+        };
+      }).sort((a, b) => {
         const distanceA = calculateDistance(new kakao.maps.LatLng(a.위도, a.경도));
         const distanceB = calculateDistance(new kakao.maps.LatLng(b.위도, b.경도));
         return distanceA - distanceB;
       });
 
-      // 현재 지도에 표시된 마커들을 모두 제거
-      for (const marker of markers) {
-        marker.setMap(null);
-      }
-      markers = []; // 마커 배열 초기화
+      clearMarkers();
 
-      // 상위 5개의 공원을 표시
-      data.slice(0, 5).forEach(park => {
+      sortedData.slice(0, 5).forEach(park => {
         const markerPosition = new kakao.maps.LatLng(park.위도, park.경도);
         const marker = new kakao.maps.Marker({
           position: markerPosition,
@@ -76,8 +95,73 @@
           title: park.공원명,
           image: new kakao.maps.MarkerImage(imageSrc, new kakao.maps.Size(24, 35)),
         });
-        markers.push(marker); // 마커를 배열에 추가
+
+        const iwContent = `<div style="padding:5px;">${park.공원명}<br>
+                            <a href="https://map.kakao.com/link/map/${park.공원명},${park.위도},${park.경도}" style="color:blue" target="_blank">큰지도보기</a>
+                            <a href="https://map.kakao.com/link/to/${park.공원명},${park.위도},${park.경도}" style="color:blue" target="_blank">길찾기</a></div>`;
+        const infowindow = new kakao.maps.InfoWindow({
+          position: markerPosition,
+          content: iwContent
+        });
+
+        kakao.maps.event.addListener(marker, 'click', () => {
+          if (openInfoWindow) {
+            openInfoWindow.close();
+            if (openInfoWindow === infowindow) {
+              openInfoWindow = null;
+              return;
+            }
+          }
+          infowindow.open(map, marker);
+          openInfoWindow = infowindow;
+        });
+
+        markers.push(marker);
       });
+    }
+
+    function searchPlaces() {
+      const keyword = document.getElementById('keyword').value;
+
+      if (!keyword.trim()) {
+        alert('키워드를 입력해주세요!');
+        return;
+      }
+
+      ps.keywordSearch(keyword, placesSearchCB);
+    }
+
+    function placesSearchCB(data, status, pagination) {
+      if (status === kakao.maps.services.Status.OK) {
+        displayPlaces(data);
+      } else {
+        alert('검색 결과가 존재하지 않습니다.');
+      }
+    }
+
+    function displayPlaces(places) {
+      const listEl = document.getElementById('results');
+      listEl.innerHTML = '';
+
+      for (let i = 0; i < places.length; i++) {
+        const itemEl = document.createElement('li');
+        itemEl.innerHTML = places[i].place_name;
+        itemEl.onclick = () => {
+          const position = new kakao.maps.LatLng(places[i].y, places[i].x);
+          map.setCenter(position);
+
+          currentMarker.setPosition(position);
+          createMarker(places[i].y, places[i].x);
+        };
+        listEl.appendChild(itemEl);
+      }
+    }
+
+    function clearMarkers() {
+      for (const marker of markers) {
+        marker.setMap(null);
+      }
+      markers = [];
     }
 
     navigator.geolocation.getCurrentPosition((pos) => {
@@ -86,10 +170,13 @@
 
       initMap(lat, lng);
 
-      // 현재 위치가 변경될 때마다 공원 다시 표시
       navigator.geolocation.watchPosition((pos) => {
         const lat = pos.coords.latitude;
         const lng = pos.coords.longitude;
+
+        const newPosition = new kakao.maps.LatLng(lat, lng);
+        currentMarker.setPosition(newPosition);
+        map.setCenter(newPosition);
         createMarker(lat, lng);
       });
     });
