--- a/채상희.html
+++ b/채상희.html
@@ -2,260 +2,297 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <title>가까운공원찾기</title>
-  <style>
-    body {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      font-family: Arial, sans-serif;
-      height: 100vh;
-      margin: 0;
-      background-color: #f7f7f7;
-    }
+    <meta charset="utf-8">
+    <title>가까운공원찾기</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-family: Arial, sans-serif;
+            height: 100vh;
+            margin: 0;
+            background-color: #f7f7f7;
+        }
 
-    #container {
-      display: flex;
-      width: 100%;
-      max-width: 1200px;
-      margin-top: 20px;
-      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
-      background: white;
-      border-radius: 8px;
-      overflow: hidden;
-    }
+        #container {
+            display: flex;
+            width: 100%;
+            max-width: 1200px;
+            margin-top: 20px;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            background: white;
+            border-radius: 8px;
+            overflow: hidden;
+        }
 
-    #search-box {
-      width: 100%;
-      max-width: 600px;
-      padding: 10px;
-      box-sizing: border-box;
-      display: flex;
-    }
+        #search-box {
+            width: 100%;
+            max-width: 600px;
+            padding: 10px;
+            box-sizing: border-box;
+            display: flex;
+        }
 
-    #search-box input {
-      flex: 1;
-      padding: 10px;
-      border: 1px solid #ccc;
-      border-radius: 4px 0 0 4px;
-      box-sizing: border-box;
-    }
+        #search-box input {
+            flex: 1;
+            padding: 10px;
+            border: 1px solid #ccc;
+            border-radius: 4px 0 0 4px;
+            box-sizing: border-box;
+        }
 
-    #search-box button {
-      padding: 10px;
-      border: none;
-      background-color: #5cb85c;
-      color: white;
-      border-radius: 0 4px 4px 0;
-      cursor: pointer;
-    }
+        #search-box button {
+            padding: 10px;
+            border: none;
+            background-color: #5cb85c;
+            color: white;
+            border-radius: 0 4px 4px 0;
+            cursor: pointer;
+        }
 
-    #search-box button:hover {
-      background-color: #4cae4c;
-    }
+        #search-box button:hover {
+            background-color: #4cae4c;
+        }
 
-    #map {
-      flex: 2;
-      height: 600px;
-    }
+        #map {
+            flex: 2;
+            height: 600px;
+        }
 
-    #results-container {
-      flex: 1;
-      overflow-y: auto;
-      max-height: 600px;
-      padding: 10px;
-      box-sizing: border-box;
-      border-left: 1px solid #ccc;
-      background: #fafafa;
-    }
+        #results-container {
+            flex: 1;
+            overflow-y: auto;
+            max-height: 600px;
+            padding: 10px;
+            box-sizing: border-box;
+            border-left: 1px solid #ccc;
+            background: #fafafa;
+        }
 
-    #results {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
+        #results {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+        }
 
-    #results li {
-      display: flex;
-      align-items: center;
-      padding: 15px;
-      margin-bottom: 10px;
-      background: lightgoldenrodyellow;
-      border-radius: 8px;
-      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-      cursor: pointer;
-      transition: background-color 0.3s, box-shadow 0.3s;
-    }
+        #results li {
+            display: flex;
+            align-items: center;
+            padding: 15px;
+            margin-bottom: 10px;
+            background: lightgoldenrodyellow;
+            border-radius: 8px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            cursor: pointer;
+            transition: background-color 0.3s, box-shadow 0.3s;
+        }
 
-    #results li:hover {
-      background-color: #f0f0f0;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-    }
-  </style>
+        #results li:hover {
+            background-color: #f0f0f0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+    </style>
 </head>
 
 <body>
-  <div id="search-box">
-    <input type="text" id="keyword" placeholder="Search places...">
-    <button onclick="searchPlaces()">Search</button>
-  </div>
-  <div id="container">
-    <div id="map"></div>
-    <div id="results-container">
-      <ul id="results"></ul>
+    <div id="search-box">
+        <input type="text" id="keyword" placeholder="Search places...">
+        <button onclick="searchPlaces()">Search</button>
     </div>
-  </div>
+    <div id="container">
+        <div id="map"></div>
+        <div id="results-container">
+            <ul id="results"></ul>
+        </div>
+    </div>
 
-  <script type="text/javascript"
-    src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6dfaf6fb0d9d9293c6bc9220328e7540&libraries=services"></script>
-  <script type="text/javascript" src="parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6dfaf6fb0d9d9293c6bc9220328e7540&libraries=services"></script>
+    <script type="text/javascript" src="parkdata.js"></script> <!-- parkdata.js 파일 불러오기 -->
 
-  <script>
-    let map;
-    let currentMarker;
-    let markers = []; // 마커를 담을 배열
-    let ps; // 장소 검색 객체
+    <script>
+        let map;
+        let currentMarker;
+        let markers = []; // 마커를 담을 배열
+        let ps; // 장소 검색 객체
+        const list = data.records;
 
-    function initMap(lat, lng) {
-      const container = document.getElementById('map');
-      const options = {
-        center: new kakao.maps.LatLng(lat, lng),
-        level: 3
-      };
-      map = new kakao.maps.Map(container, options);
+        function initMap(lat, lng) {
+            const container = document.getElementById('map');
+            const options = {
+                center: new kakao.maps.LatLng(lat, lng),
+                level: 3
+            };
+            map = new kakao.maps.Map(container, options);
 
-      // 현재 위치 마커
-      const markerPosition = new kakao.maps.LatLng(lat, lng);
-      currentMarker = new kakao.maps.Marker({
-        position: markerPosition,
-        map: map,
-        title: "현재 위치"
-      });
+            // 현재 위치 마커
+            const markerPosition = new kakao.maps.LatLng(lat, lng);
+            currentMarker = new kakao.maps.Marker({
+                position: markerPosition,
+                map: map,
+                title: "현재 위치"
+            });
 
-      // 장소 검색 객체 생성
-      ps = new kakao.maps.services.Places();
-    }
+            // 현재 위치 인포윈도우
+            const currentInfoWindow = new kakao.maps.InfoWindow({
+                content: '<div class="info-window-content">현재 위치</div>'
+            });
 
-    function createMarker(lat, lng) {
-      const imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
+            // 현재 위치 마커에 마우스 오버/아웃 이벤트 추가
+            kakao.maps.event.addListener(currentMarker, 'mouseover', function() {
+                currentInfoWindow.open(map, currentMarker);
+            });
 
-      // 현재 위치
-      const currentPosition = new kakao.maps.LatLng(lat, lng);
+            kakao.maps.event.addListener(currentMarker, 'mouseout', function() {
+                currentInfoWindow.close();
+            });
 
-      // 공원과 현재 위치 간의 거리를 계산하는 함수
-      function calculateDistance(parkPosition) {
-        if (!(parkPosition instanceof kakao.maps.LatLng)) {
-          console.error('Invalid park position:', parkPosition);
-          return Number.MAX_VALUE;
+            // 장소 검색 객체 생성
+            ps = new kakao.maps.services.Places();
         }
 
-        const latDiff = parkPosition.getLat() - currentPosition.getLat();
-        const lngDiff = parkPosition.getLng() - currentPosition.getLng();
-        return Math.sqrt(latDiff * latDiff + lngDiff * lngDiff);
-      }
+        function createMarker(lat, lng) {
+            const imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
 
-      // 공원 데이터를 거리순으로 정렬
-      data.sort((a, b) => {
-        const distanceA = calculateDistance(new kakao.maps.LatLng(a.위도, a.경도));
-        const distanceB = calculateDistance(new kakao.maps.LatLng(b.위도, b.경도));
-        return distanceA - distanceB;
-      });
+            // 현재 위치
+            const currentPosition = new kakao.maps.LatLng(lat, lng);
 
-      // 현재 지도에 표시된 마커들을 모두 제거
-      clearMarkers();
+            // 공원과 현재 위치 간의 거리를 계산하는 함수
+            function calculateDistance(parkPosition) {
+                if (!(parkPosition instanceof kakao.maps.LatLng)) {
+                    console.error('Invalid park position:', parkPosition);
+                    return Number.MAX_VALUE;
+                }
 
-      // 상위 5개의 공원을 표시
-      data.slice(0, 5).forEach(park => {
-        const markerPosition = new kakao.maps.LatLng(park.위도, park.경도);
-        const marker = new kakao.maps.Marker({
-          position: markerPosition,
-          map: map,
-          title: park.공원명,
-          image: new kakao.maps.MarkerImage(imageSrc, new kakao.maps.Size(24, 35)),
+                const latDiff = parkPosition.getLat() - currentPosition.getLat();
+                const lngDiff = parkPosition.getLng() - currentPosition.getLng();
+                return Math.sqrt(latDiff * latDiff + lngDiff * lngDiff);
+            }
+
+            // 공원 데이터를 거리순으로 정렬
+            data.sort((a, b) => {
+                const distanceA = calculateDistance(new kakao.maps.LatLng(a.위도, a.경도));
+                const distanceB = calculateDistance(new kakao.maps.LatLng(b.위도, b.경도));
+                return distanceA - distanceB;
+            });
+
+            // 현재 지도에 표시된 마커들을 모두 제거
+            clearMarkers();
+
+            // 상위 5개의 공원을 표시
+            data.slice(0, 5).forEach(park => {
+                const markerPosition = new kakao.maps.LatLng(park.위도, park.경도);
+                const marker = new kakao.maps.Marker({
+                    position: markerPosition,
+                    map: map,
+                    title: park.공원명,
+                    image: new kakao.maps.MarkerImage(imageSrc, new kakao.maps.Size(24, 35)),
+                });
+                markers.push(marker); // 마커를 배열에 추가
+
+                // 인포윈도우 내용 구성
+                const infowindowContent = `
+                    <div class="info-window-content">
+                        <h4>${park.공원명}</h4>
+                        <img src="${park.이미지}" alt="Park Image">
+                        <p>주소: ${park.소재지지번주소}</p>
+                        <p>면적: ${park.공원면적}㎡</p>
+                        <p>지정고시일: ${park.지정고시일}</p>
+                    </div>
+                `;
+                const infowindow = new kakao.maps.InfoWindow({
+                    content: infowindowContent
+                });
+
+                kakao.maps.event.addListener(marker, 'mouseover', function() {
+                    infowindow.open(map, marker);
+                });
+
+                kakao.maps.event.addListener(marker, 'mouseout', function() {
+                    infowindow.close();
+                });
+            });
+        }
+
+        function searchPlaces() {
+            const keyword = document.getElementById('keyword').value;
+
+            if (!keyword.trim()) {
+                alert('키워드를 입력해주세요!');
+                return;
+            }
+
+            // 장소 검색 객체를 통해 키워드로 장소 검색
+            ps.keywordSearch(keyword, placesSearchCB);
+        }
+
+        function placesSearchCB(data, status, pagination) {
+            if (status === kakao.maps.services.Status.OK) {
+                displayPlaces(data);
+            } else {
+                alert('검색 결과가 존재하지 않습니다.');
+            }
+        }
+
+        function displayPlaces(places) {
+            const listEl = document.getElementById('results');
+            listEl.innerHTML = '';
+
+            for (let i = 0; i < places.length; i++) {
+                const itemEl = document.createElement('li');
+                itemEl.innerHTML = places[i].place_name;
+                itemEl.onclick = () => {
+                    const position = new kakao.maps.LatLng(places[i].y, places[i].x);
+                    map.setCenter(position);
+
+                    // 현재 위치 마커 업데이트
+                    currentMarker.setPosition(position);
+
+                    // 해당 위치를 중심으로 공원 표시
+                    createMarker(places[i].y, places[i].x);
+                };
+                listEl.appendChild(itemEl);
+            }
+        }
+
+        function clearMarkers() {
+            for (const marker of markers) {
+                marker.setMap(null);
+            }
+            markers = []; // 마커 배열 초기화
+        }
+
+        // 검색창 엔터키 기능
+        document.addEventListener('DOMContentLoaded', () => {
+            document.getElementById('keyword').addEventListener('keypress', (event) => {
+                if (event.key === 'Enter') {
+                    searchPlaces();
+                }
+            });
+
+            navigator.geolocation.getCurrentPosition((pos) => {
+                const lat = pos.coords.latitude;
+                const lng = pos.coords.longitude;
+
+                initMap(lat, lng);
+
+                // 현재 위치가 변경될 때마다 현재 위치 마커와 공원 다시 표시
+                navigator.geolocation.watchPosition((pos) => {
+                    const lat = pos.coords.latitude;
+                    const lng = pos.coords.longitude;
+
+                    // 현재 위치 마커 업데이트
+                    const newPosition = new kakao.maps.LatLng(lat, lng);
+                    currentMarker.setPosition(newPosition);
+
+                    // 현재 위치를 중심으로 공원 다시 표시
+                    createMarker(lat, lng);
+                });
+            }, (err) => {
+                console.error(err);
+            });
         });
-        markers.push(marker); // 마커를 배열에 추가
-      });
-    }
-
-    function searchPlaces() {
-      const keyword = document.getElementById('keyword').value;
-
-      if (!keyword.trim()) {
-        alert('키워드를 입력해주세요!');
-        return;
-      }
-
-      // 장소 검색 객체를 통해 키워드로 장소 검색
-      ps.keywordSearch(keyword, placesSearchCB);
-    }
-
-    function placesSearchCB(data, status, pagination) {
-      if (status === kakao.maps.services.Status.OK) {
-        displayPlaces(data);
-      } else {
-        alert('검색 결과가 존재하지 않습니다.');
-      }
-    }
-
-    function displayPlaces(places) {
-      const listEl = document.getElementById('results');
-      listEl.innerHTML = '';
-
-      for (let i = 0; i < places.length; i++) {
-        const itemEl = document.createElement('li');
-        itemEl.innerHTML = places[i].place_name;
-        itemEl.onclick = () => {
-          const position = new kakao.maps.LatLng(places[i].y, places[i].x);
-          map.setCenter(position);
-
-          // 현재 위치 마커 업데이트
-          currentMarker.setPosition(position);
-
-          // 해당 위치를 중심으로 공원 표시
-          createMarker(places[i].y, places[i].x);
-        };
-        listEl.appendChild(itemEl);
-      }
-    }
-
-    function clearMarkers() {
-      for (const marker of markers) {
-        marker.setMap(null);
-      }
-      markers = []; // 마커 배열 초기화
-    }
-
-    // 검색창 엔터키 기능
-    document.addEventListener('DOMContentLoaded', () => {
-      document.getElementById('keyword').addEventListener('keypress', (event) => {
-        if (event.key === 'Enter') {
-          searchPlaces();
-        }
-      });
-    });
-
-    navigator.geolocation.getCurrentPosition((pos) => {
-      const lat = pos.coords.latitude;
-      const lng = pos.coords.longitude;
-
-      initMap(lat, lng);
-
-      // 현재 위치가 변경될 때마다 현재 위치 마커와 공원 다시 표시
-      navigator.geolocation.watchPosition((pos) => {
-        const lat = pos.coords.latitude;
-        const lng = pos.coords.longitude;
-
-        // 현재 위치 마커 업데이트
-        const newPosition = new kakao.maps.LatLng(lat, lng);
-        currentMarker.setPosition(newPosition);
-        map.setCenter(newPosition);
-
-        // 현재 위치를 중심으로 공원 다시 표시
-        createMarker(lat, lng);
-      });
-    });
-  </script>
+    </script>
 </body>
 
 </html>
