--- a/index3.html
+++ b/index3.html
@@ -5,30 +5,92 @@
   <meta charset="utf-8">
   <title>가까운공원찾기</title>
   <style>
-    #map {
-      width: 500px;
-      height: 400px;
+    body {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      font-family: Arial, sans-serif;
+      height: 100vh;
+      margin: 0;
+      background-color: #f7f7f7;
+    }
+
+    #container {
+      display: flex;
+      width: 100%;
+      max-width: 1200px;
+      margin-top: 20px;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+      background: white;
+      border-radius: 8px;
+      overflow: hidden;
     }
 
     #search-box {
-      margin: 20px 0;
+      width: 100%;
+      max-width: 600px;
+      padding: 10px;
+      box-sizing: border-box;
+      display: flex;
+    }
+
+    #search-box input {
+      flex: 1;
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 4px 0 0 4px;
+      box-sizing: border-box;
+    }
+
+    #search-box button {
+      padding: 10px;
+      border: none;
+      background-color: #5cb85c;
+      color: white;
+      border-radius: 0 4px 4px 0;
+      cursor: pointer;
+    }
+
+    #search-box button:hover {
+      background-color: #4cae4c;
+    }
+
+    #map {
+      flex: 2;
+      height: 600px;
+    }
+
+    #results-container {
+      flex: 1;
+      overflow-y: auto;
+      max-height: 600px;
+      padding: 10px;
+      box-sizing: border-box;
+      border-left: 1px solid #ccc;
+      background: #fafafa;
     }
 
     #results {
       list-style: none;
       padding: 0;
+      margin: 0;
     }
 
     #results li {
-      margin: 5px 0;
-      padding: 5px;
-      background: lightcoral;
+      display: flex;
+      align-items: center;
+      padding: 15px;
+      margin-bottom: 10px;
+      background: lightgoldenrodyellow;
+      border-radius: 8px;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       cursor: pointer;
+      transition: background-color 0.3s, box-shadow 0.3s;
     }
 
-    a{
-      color: black;
-      text-decoration: none;
+    #results li:hover {
+      background-color: #f0f0f0;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     }
   </style>
 </head>
@@ -38,8 +100,12 @@
     <input type="text" id="keyword" placeholder="Search places...">
     <button onclick="searchPlaces()">Search</button>
   </div>
-  <div id="map"></div>
-  <ul id="results"></ul>
+  <div id="container">
+    <div id="map"></div>
+    <div id="results-container">
+      <ul id="results"></ul>
+    </div>
+  </div>
 
   <script type="text/javascript"
     src="//dapi.kakao.com/v2/maps/sdk.js?appkey=6dfaf6fb0d9d9293c6bc9220328e7540&libraries=services"></script>
@@ -48,9 +114,8 @@
   <script>
     let map;
     let currentMarker;
-    let markers = [];
-    let ps;
-    let openInfoWindow = null;
+    let markers = []; // 마커를 담을 배열
+    let ps; // 장소 검색 객체
 
     function initMap(lat, lng) {
       const container = document.getElementById('map');
@@ -60,6 +125,7 @@
       };
       map = new kakao.maps.Map(container, options);
 
+      // 현재 위치 마커
       const markerPosition = new kakao.maps.LatLng(lat, lng);
       currentMarker = new kakao.maps.Marker({
         position: markerPosition,
@@ -67,67 +133,65 @@
         title: "현재 위치"
       });
 
+      // 현재 위치에 인포윈도우 추가
+      const currentLocationInfoWindow = new kakao.maps.InfoWindow({
+        content: `<div style="padding:5px;">내 위치</div>`
+      });
+
+      kakao.maps.event.addListener(currentMarker, 'mouseover', () => {
+        currentLocationInfoWindow.open(map, currentMarker);
+      });
+
+      kakao.maps.event.addListener(currentMarker, 'mouseout', () => {
+        currentLocationInfoWindow.close();
+      });
+
+      // 장소 검색 객체 생성
       ps = new kakao.maps.services.Places();
     }
 
     function createMarker(lat, lng) {
       const imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
+
+      // 현재 위치
       const currentPosition = new kakao.maps.LatLng(lat, lng);
 
+      // 공원과 현재 위치 간의 거리를 계산하는 함수
       function calculateDistance(parkPosition) {
         if (!(parkPosition instanceof kakao.maps.LatLng)) {
           console.error('Invalid park position:', parkPosition);
           return Number.MAX_VALUE;
         }
+
         const latDiff = parkPosition.getLat() - currentPosition.getLat();
         const lngDiff = parkPosition.getLng() - currentPosition.getLng();
         return Math.sqrt(latDiff * latDiff + lngDiff * lngDiff);
       }
 
-      const sortedData = data.map(park => {
-        return {
-          ...park,
-          위도: parseFloat(park.위도),
-          경도: parseFloat(park.경도)
-        };
-      }).sort((a, b) => {
+      // 공원 데이터를 거리순으로 정렬
+      data.sort((a, b) => {
         const distanceA = calculateDistance(new kakao.maps.LatLng(a.위도, a.경도));
         const distanceB = calculateDistance(new kakao.maps.LatLng(b.위도, b.경도));
         return distanceA - distanceB;
       });
 
+      // 현재 지도에 표시된 마커들을 모두 제거
       clearMarkers();
 
-      sortedData.slice(0, 5).forEach(park => {
+      // 상위 5개의 공원을 표시
+      data.slice(0, 5).forEach(park => {
         const markerPosition = new kakao.maps.LatLng(park.위도, park.경도);
         const marker = new kakao.maps.Marker({
           position: markerPosition,
           map: map,
           title: park.공원명,
-          image: new kakao.maps.MarkerImage(imageSrc, new kakao.maps.Size(24, 35)),
+          image: new kakao.maps.MarkerImage(imageSrc, new kakao.maps.Size(24, 35)) // 마커에 인포윈도우 추가
         });
-
-        const iwContent = `<div style="padding:5px;">${park.공원명}<br>
-                            <a href="https://map.kakao.com/link/map/${park.공원명},${park.위도},${park.경도}" style="color:blue" target="_blank">큰지도보기</a>
-                            <a href="https://map.kakao.com/link/to/${park.공원명},${park.위도},${park.경도}" style="color:blue" target="_blank">길찾기</a></div>`;
         const infowindow = new kakao.maps.InfoWindow({
-          position: markerPosition,
-          content: iwContent
+          content: `<div style="width:150px;height:25px;padding:5px;text-align:center; background-color:lightyellow;">${title}</div>`
         });
+        markers.push(marker); // 마커를 배열에 추가
 
-        kakao.maps.event.addListener(marker, 'click', () => {
-          if (openInfoWindow) {
-            openInfoWindow.close();
-            if (openInfoWindow === infowindow) {
-              openInfoWindow = null;
-              return;
-            }
-          }
-          infowindow.open(map, marker);
-          openInfoWindow = infowindow;
-        });
-
-        markers.push(marker);
       });
     }
 
@@ -139,6 +203,7 @@
         return;
       }
 
+      // 장소 검색 객체를 통해 키워드로 장소 검색
       ps.keywordSearch(keyword, placesSearchCB);
     }
 
@@ -161,7 +226,10 @@
           const position = new kakao.maps.LatLng(places[i].y, places[i].x);
           map.setCenter(position);
 
+          // 현재 위치 마커 업데이트
           currentMarker.setPosition(position);
+
+          // 해당 위치를 중심으로 공원 표시
           createMarker(places[i].y, places[i].x);
         };
         listEl.appendChild(itemEl);
@@ -172,8 +240,17 @@
       for (const marker of markers) {
         marker.setMap(null);
       }
-      markers = [];
+      markers = []; // 마커 배열 초기화
     }
+
+    // 검색창 엔터키 기능
+    document.addEventListener('DOMContentLoaded', () => {
+      document.getElementById('keyword').addEventListener('keypress', (event) => {
+        if (event.key === 'Enter') {
+          searchPlaces();
+        }
+      });
+    });
 
     navigator.geolocation.getCurrentPosition((pos) => {
       const lat = pos.coords.latitude;
@@ -181,13 +258,17 @@
 
       initMap(lat, lng);
 
+      // 현재 위치가 변경될 때마다 현재 위치 마커와 공원 다시 표시
       navigator.geolocation.watchPosition((pos) => {
         const lat = pos.coords.latitude;
         const lng = pos.coords.longitude;
 
+        // 현재 위치 마커 업데이트
         const newPosition = new kakao.maps.LatLng(lat, lng);
         currentMarker.setPosition(newPosition);
         map.setCenter(newPosition);
+
+        // 현재 위치를 중심으로 공원 다시 표시
         createMarker(lat, lng);
       });
     });
