--- a/채상희.html
+++ b/채상희.html
@@ -173,7 +173,8 @@
             data.sort((a, b) => {
                 const distanceA = calculateDistance(new kakao.maps.LatLng(a.위도, a.경도));
                 const distanceB = calculateDistance(new kakao.maps.LatLng(b.위도, b.경도));
-                return distanceA - distanceB;
+                distance =  distanceA - distanceB;
+                return distance;
             });
 
             // 현재 지도에 표시된 마커들을 모두 제거
@@ -194,10 +195,7 @@
                 const infowindowContent = `
                     <div class="info-window-content">
                         <h4>${park.공원명}</h4>
-                        <img src="${park.이미지}" alt="Park Image">
                         <p>주소: ${park.소재지지번주소}</p>
-                        <p>면적: ${park.공원면적}㎡</p>
-                        <p>지정고시일: ${park.지정고시일}</p>
                     </div>
                 `;
                 const infowindow = new kakao.maps.InfoWindow({
