--- a/채상희.html
+++ b/채상희.html
@@ -131,6 +131,7 @@
             justify-content: center;
             display: none;
         }
+
     </style>
 </head>
 
@@ -142,8 +143,8 @@
         <h1 id="cold">조금 쌀쌀한 날</h1>
     </div>
     <div id="search-box">
-        <input type="text" id="keyword" placeholder="Search places...">
-        <button onclick="searchPlaces()">Search</button>
+        <input type="text" id="keyword">
+        <button onclick="searchPlaces()">검색</button>
     </div>
     <div id="container">
         <div id="map"></div>
@@ -216,7 +217,7 @@
 
             // 현재 위치 인포윈도우
             const currentInfoWindow = new kakao.maps.InfoWindow({
-                content: '<div class="info-window-content">현재 위치</div>'
+                content: '<div>현재 위치</div>'
             });
 
             // 현재 위치 마커에 마우스 오버/아웃 이벤트 추가
@@ -263,7 +264,8 @@
             // 상위 5개의 공원을 표시
             data.slice(0, 5).forEach(park => {
                 const markerPosition = new kakao.maps.LatLng(park.위도, park.경도);
-                const distance = calculateDistance(lat, lng, park.위도, park.경도).toFixed(2); // 거리 계산
+                const distance = calculateDistance(lat, lng, park.위도, park.경도).toFixed(2);
+
                 const marker = new kakao.maps.Marker({
                     position: markerPosition,
                     map: map,
@@ -274,10 +276,10 @@
 
                 // 인포윈도우 내용 구성
                 const infowindowContent = `
-                    <div class="info-window-content">
-                        <h4>${park.공원명}</h4>
-                        <p>주소: ${park.소재지지번주소}</p>
-                        <p>직선거리: ${distance} km</p>
+                    <div style="text-align: center; background-color: lightyellow; padding: 10px; white-space: nowrap;">
+                        <h4 style="margin: 0;">${park.공원명}</h4>
+                        <p style="margin: 0;">주소: ${park.소재지지번주소}</p>
+                        <p style="margin: 0;">직선거리: ${distance} km</p>
                     </div>
                 `;
                 const infowindow = new kakao.maps.InfoWindow({
