배경 색에서 사진으로 변경

--- a/이상경.html
+++ b/이상경.html
@@ -9,7 +9,8 @@
             display: flex;
             font-size: 50px;
             color: yellow;
-            background-color: red;
+            background-image: url('img/sun-rays-cloudy-sky.jpg'); /* 배경 이미지 설정 */
+            background-size: cover; /* 이미지를 컨테이너에 맞게 조정 */
             font-weight: bold;
             font-style: italic;
             justify-content: center;
@@ -20,7 +21,8 @@
             display: flex;
             font-size: 50px;
             color: yellow;
-            background-color: pink;
+            background-image: url('img/sp.jpg'); /* 배경 이미지 설정 */
+            background-size: cover; /* 이미지를 컨테이너에 맞게 조정 */
             justify-content: center;
             display: none;
         }
@@ -29,7 +31,8 @@
             display: flex;
             font-size: 50px;
             color: green;
-            background-color: lightblue;
+            background-image: url('img/autumn.jpg'); /* 배경 이미지 설정 */
+            background-size: cover; /* 이미지를 컨테이너에 맞게 조정 */
             justify-content: center;
             display: none;
         }
@@ -38,7 +41,8 @@
             display: flex;
             font-size: 50px;
             color: black;
-            background-color: blue;
+            background-image: url('img/snow-sky.gif'); /* 배경 이미지 설정 */
+            background-size: cover; /* 이미지를 컨테이너에 맞게 조정 */
             font-style: italic;
             justify-content: center;
             display: none;
