지도위치 수정

--- a/채상희.html
+++ b/채상희.html
@@ -15,6 +15,13 @@
             background-color: #f7f7f7;
         }
 
+        h1 {
+            width: 2000px;
+            margin: 0;
+            padding: 20px 0;
+            text-align: center;
+        }
+
         #container {
             display: flex;
             width: 100%;
@@ -24,6 +31,7 @@
             background: white;
             border-radius: 8px;
             overflow: hidden;
+            margin-bottom: 80px;
         }
 
         #search-box {
