스크롤바수정

--- a/채상희.html
+++ b/채상희.html
@@ -101,6 +101,22 @@
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
         }
 
+        /* 커스텀 스크롤바 스타일 */
+        #results-container::-webkit-scrollbar {
+            width: 12px;
+        }
+
+        #results-container::-webkit-scrollbar-track {
+            background: #f1f1f1;
+            border-radius: 10px;
+        }
+
+        #results-container::-webkit-scrollbar-thumb {
+            background: lightseagreen;
+            border-radius: 10px;
+        }
+
+
         #hot {
             display: flex;
             font-size: 50px;
