--- a/채상희.html
+++ b/채상희.html
@@ -10,13 +10,14 @@
             flex-direction: column;
             align-items: center;
             font-family: Arial, sans-serif;
+            width: 100vw;
             height: 100vh;
             margin: 0;
             background-color: #f7f7f7;
         }
 
         h1 {
-            width: 2000px;
+            width: 100vw;
             margin: 0;
             padding: 20px 0;
             text-align: center;
